--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,7 +1,7 @@
 .SearchForm {
-  width: 400px;
+  width: 70%;
   height: auto;
-  padding: 40px;
+  padding: 5%;
   margin: 0 auto;
   border-radius: 3px;
   border: black 2px;
